fix CTA z-index

--- a/frontend/src/templates/RealEstate/components/CallToActionGroup/styles.module.scss
+++ b/frontend/src/templates/RealEstate/components/CallToActionGroup/styles.module.scss
@@ -7,7 +7,7 @@
   flex-direction: column;
   align-items: center;
   gap: 20px;
-  z-index: 1000;
+  z-index: 98;
 }
 
 .buttonPrimary,
